src/core/types.h

typedef unsigned char uchar;
typedef unsigned short ushort;
// Wrapper for an individual cv::cvPoint
typedef struct Point {
  int x;
  int y;
} Point;
// Wrapper for an individual cv::Point2f
typedef struct Point2f {
  float x;
  float y;
} Point2f;
typedef struct Point3f {
  float x;
  float y;
  float z;
} Point3f;
typedef struct Point3i {
  int x;
  int y;
  int z;
} Point3i;
// Wrapper for an individual cv::cvRect
typedef struct Rect {
  int x;
  int y;
  int width;
  int height;
} Rect;
typedef struct Rect2f {
  float x;
  float y;
  float width;
  float height;
} Rect2f;
// Wrapper for an individual cv::cvSize
typedef struct Size {
  int width;
  int height;
} Size;
typedef struct Size2f {
  float width;
  float height;
} Size2f;
// Wrapper for an individual cv::RotatedRect
typedef struct RotatedRect {
  Point2f center;
  Size2f size;
  double angle;
} RotatedRect;
// Wrapper for an individual cv::cvScalar
typedef struct Scalar {
  double val1;
  double val2;
  double val3;
  double val4;
} Scalar;
// Wrapper for a individual cv::KeyPoint
typedef struct KeyPoint {
  double x;
  double y;
  double size;
  double angle;
  double response;
  int octave;
  int classID;
} KeyPoint;
// Wrapper for an individual cv::DMatch
typedef struct DMatch {
  int queryIdx;
  int trainIdx;
  int imgIdx;
  float distance;
} DMatch;
// Wrapper for an individual cv::Moment
typedef struct Moment {
  double m00;
  double m10;
  double m01;
  double m20;
  double m11;
  double m02;
  double m30;
  double m21;
  double m12;
  double m03;

  double mu20;
  double mu11;
  double mu02;
  double mu30;
  double mu21;
  double mu12;
  double mu03;

  double nu20;
  double nu11;
  double nu02;
  double nu30;
  double nu21;
  double nu12;
  double nu03;
} Moment;
typedef struct CvStatus {
  int code;
  char *msg;
  char *err;
  char *func;
  char *file;
  int line;
} CvStatus;
typedef struct Vec2b {
  uchar val1;
  uchar val2;
} Vec2b;
typedef struct Vec3b {
  uchar val1;
  uchar val2;
  uchar val3;
} Vec3b;
typedef struct Vec4b {
  uchar val1;
  uchar val2;
  uchar val3;
  uchar val4;
} Vec4b;
typedef struct Vec2s {
  short val1;
  short val2;
} Vec2s;
typedef struct Vec3s {
  short val1;
  short val2;
  short val3;
} Vec3s;
typedef struct Vec4s {
  short val1;
  short val2;
  short val3;
  short val4;
} Vec4s;
typedef struct Vec2w {
  ushort val1;
  ushort val2;
} Vec2w;
typedef struct Vec3w {
  ushort val1;
  ushort val2;
  ushort val3;
} Vec3w;
typedef struct Vec4w {
  ushort val1;
  ushort val2;
  ushort val3;
  ushort val4;
} Vec4w;
typedef struct Vec2i {
  int val1;
  int val2;
} Vec2i;
typedef struct Vec3i {
  int val1;
  int val2;
  int val3;
} Vec3i;
typedef struct Vec4i {
  int val1;
  int val2;
  int val3;
  int val4;
} Vec4i;
typedef struct Vec6i {
  int val1;
  int val2;
  int val3;
  int val4;
  int val5;
  int val6;
} Vec6i;
typedef struct Vec2f {
  float val1;
  float val2;
} Vec2f;
typedef struct Vec3f {
  float val1;
  float val2;
  float val3;
} Vec3f;
typedef struct Vec4f {
  float val1;
  float val2;
  float val3;
  float val4;
} Vec4f;
typedef struct Vec6f {
  float val1;
  float val2;
  float val3;
  float val4;
  float val5;
  float val6;
} Vec6f;
typedef struct Vec2d {
  double val1;
  double val2;
} Vec2d;
typedef struct Vec3d {
  double val1;
  double val2;
  double val3;
} Vec3d;
typedef struct Vec4d {
  double val1;
  double val2;
  double val3;
  double val4;
} Vec4d;
typedef struct Vec6d {
  double val1;
  double val2;
  double val3;
  double val4;
  double val5;
  double val6;
} Vec6d;
typedef struct TermCriteria {
  int type;
  int maxCount;
  double epsilon;
} TermCriteria;
typedef void (*CvCallback_0)();
typedef void (*CvCallback_1)(void *);
typedef void (*CvCallback_2)(void *, void *);
typedef void (*CvCallback_3)(void *, void *, void *);
typedef void (*CvCallback_4)(void *, void *, void *, void *);
typedef void (*CvCallback_5)(void *, void *, void *, void *, void *);
typedef void (*CvCallback_6)(void *, void *, void *, void *, void *, void *);
typedef void (*CvCallback_7)(void *, void *, void *, void *, void *, void *, void *);
typedef void (*CvCallback_8)(void *, void *, void *, void *, void *, void *, void *, void *);
typedef void (*CvCallback_9)(void *, void *, void *, void *, void *, void *, void *, void *, void *);
// Contour is alias for Points
typedef VecPoint Contour;
typedef VecPoint2f Contour2f;
typedef VecPoint3f Contour3f;
typedef VecVecPoint Contours;
typedef VecVecPoint2f Contours2f;
typedef VecVecPoint3f Contours3f;